[package]
authors = ["maxtremblay <matrem@protonmail.com>"]
edition = "2018"
name = "bigs"
version = "0.2.1"

[dependencies]
indexmap = {version = "1.6.0", features = ["serde-1"] }
num-rational = "0.3.0"
rand = "0.7.3"
rand_chacha = "0.2.2"
serde = {version = "1.0.116", features = ["derive"] }
serde_json = "1.0.59"
structopt = "0.3.20"
