[package]
name = "bigs"
version = "0.2.2"
authors = ["maxtremblay <matrem@protonmail.com>"]
edition = "2018"
description = "A bipartite graph sampler"
license = "MIT OR Apache-2.0"
keywords = ["graph", "sampling", "sat", "bipartite"]
categories = ["algorithms", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = {version = "1.6.0", features = ["serde-1"] }
num-rational = "0.3.0"
rand = "0.7.3"
rand_chacha = "0.2.2"
serde = {version = "1.0.116", features = ["derive"] }
serde_json = "1.0.59"

[dev-dependencies]
rand = {version="0.7.3", features=["small_rng"]}
