[package]
name = "bigs"
version = "0.2.4"
authors = ["maxtremblay <matrem@protonmail.com>"]
edition = "2018"
description = "A bipartite graph sampler"
license = "MIT OR Apache-2.0"
keywords = ["graph", "sampling", "sat", "bipartite"]
categories = ["algorithms", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "1.7.0", features = ["serde-1"] }
num-rational = "0.4.0"
rand = "0.8.4"
rand_chacha = "0.3.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

[dev-dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
