[package]
name = "bigs"
version = "0.3.0"
authors = ["maxtremblay <matrem@protonmail.com>"]
edition = "2021"
description = "A bipartite graph sampler"
license = "MIT OR Apache-2.0"
keywords = ["graph", "sampling", "sat", "bipartite"]
categories = ["algorithms", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "1.8.0", features = ["serde-1"] }
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }

[features]
